[package]
name = "xcnotary"
version = "0.1.0"
authors = ["David Vartan <david@akeru.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = """
Helper tool for Apple Notarization Service
"""
keywords = ["mac", "macos", "osx"]
categories = ["command-line-utilities", "development-tools", "os::macos-apis"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.10"
indicatif = "0.14"
plist = "0.5"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"]}
tempfile = "3.1"
structopt = "0.3"

[[bin]]
name = "xcnotary"
test = false
doc = false
